--- a/client/question-paper/package.json
+++ b/client/question-paper/package.json
@@ -39,7 +39,8 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "tailwindcss": "^3.4.14"
   },
   "proxy": "http://localhost:9000"
 }
