--- a/backend/package.json
+++ b/backend/package.json
@@ -7,10 +7,12 @@
     },
     "dependencies": {
         "bcrypt": "^5.1.1",
+        "body-parser": "^2.2.0",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
+        "pdfkit": "^0.17.0",
         "pg": "^8.12.0",
         "pg-hstore": "^2.3.4",
         "sequelize": "^6.37.3"
