--- a/client/question-paper/.env.production
+++ b/client/question-paper/.env.production
@@ -1,2 +1,4 @@
 # When you deploy the React app for host 
 REACT_APP_API_URL=https://question-paper-backend10.onrender.com
+
+REACT_APP_FRONTEND_URL=http://localhost:3000
